package heritage;

public interface IReportGenerator {
    String generate(Etudiant etudiant);
}
